--- a/package.json
+++ b/package.json
@@ -1,10 +1,13 @@
 {
+  "homepage": " https://karan778862.github.io/kkp-react/",
   "name": "reactrouter",
   "private": true,
   "version": "0.0.0",
   "type": "module",
   "scripts": {
     "dev": "vite",
+    "predeploy":"npm run build",
+    "deploy":"gh-pages -b build",
     "build": "vite build",
     "lint": "eslint . --ext js,jsx --report-unused-disable-directives --max-warnings 0",
     "preview": "vite preview"
